--- a/3.Infraestructure/OG.Zoo.Infraestructure.IoC/OG.Zoo.Infraestructure.IoC.csproj
+++ b/3.Infraestructure/OG.Zoo.Infraestructure.IoC/OG.Zoo.Infraestructure.IoC.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="LightInject.Microsoft.AspNetCore.Hosting" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
